--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.js" }
-    ],
-    "functions": {
-    "index": {
+  "version": 2,
+  "functions": {
+    "index.js": {
       "maxDuration": 10,
       "maxBodySize": "100mb"
     }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ]
 }
-  
