--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,16 @@
 {
-  "version": 2,
-  "functions": {
-    "index.js": {
-      "maxDuration": 10,
-      "maxBodySize": "100mb"
-    }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.js" }
-  ]
-}
+    "version": 2,
+    "name": "softedubackmongodb",
+    "builds": [
+       { 
+        "src": "index.js", 
+        "use": "@vercel/node" 
+      }
+    ],
+    "routes": [
+       { 
+        "src": "/(.*)", 
+        "dest": "/index.js" 
+      }
+    ]
+  }
